--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,8 +1,11 @@
-.shop-container{
+.shop-container {
     display: grid;
     grid-template-columns: 4fr 1fr;
+    background-color: white;
+    color: black;
 }
-.products-container{
+
+.products-container {
     margin: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
